Se modifican los colores de los botones

--- a/index.html
+++ b/index.html
@@ -33,9 +33,21 @@
             </div>
         </div>
         <video autoplay muted loop>
-            <source src="./video/cap.mp4" type="video/mp4">>
+            <source src="./video/cap.mp4" type="video/mp4">
+            <source src="./video/cap.ogg" type="video/ogg">
+            <source src="./video/cap.webm" type="video/webm">
         </video>
     </div>
+
+    <section class="contenedor contenido-festival">
+        <div class="imagen-festival">
+            <img src="./img/akira.jpg" alt="Mangaka">
+        </div>
+        <div class="informacion-festival">
+            <h3>Akira Toriyama</h3>
+            <p>EL famoso creador de la icónica serie Dragon Ball y Dragon Ball Z</p>
+        </div>
+    </section>
  
 
 </body>
