Se agrega el git ignore y la seccion de invitados

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <title>Comic Con Versión ZZ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +19,12 @@
             <h1 class="titulo2">P <span>Z</span></h1>            
 
             <nav class="navegacion-princiapl">
-                <a href="#">Artistas</a>
+                <a href="#">Invitados</a>
                 <a href="#">Galeria</a>
                 <a href="#">Entradas</a>
+                <a href="#">Programación</a>
             </nav>
+            
         </div>
     </header>
 
@@ -46,9 +49,17 @@
         <div class="informacion-festival">
             <h3>Akira Toriyama</h3>
             <p>EL famoso creador de la icónica serie Dragon Ball y Dragon Ball Z</p>
+            <a href="#">Ver invitado</a>
+        </div>
+        <div class="imagen-festival">
+            <img src="./img/oda.jpeg" alt="Mangaka">
+        </div>
+        <div class="informacion-festival">
+            <h3>Eichiro Oda</h3>
+            <p>EL famoso creador de la icónica serie One Piece</p>
+            <a href="#">Ver invitado</a>
         </div>
     </section>
  
-
 </body>
 </html>
