Se modifican el mixin grid para que tome parámetros

--- a/index.html
+++ b/index.html
@@ -42,24 +42,27 @@
         </video>
     </div>
 
-    <section class="contenedor contenido-festival">
-        <div class="imagen-festival">
-            <img src="./img/akira.jpg" alt="Mangaka">
-        </div>
-        <div class="informacion-festival">
-            <h3>Akira Toriyama</h3>
-            <p>EL famoso creador de la icónica serie Dragon Ball y Dragon Ball Z</p>
-            <a href="#">Ver invitado</a>
-        </div>
-        <div class="imagen-festival">
-            <img src="./img/oda.jpeg" alt="Mangaka">
-        </div>
-        <div class="informacion-festival">
-            <h3>Eichiro Oda</h3>
-            <p>EL famoso creador de la icónica serie One Piece</p>
-            <a href="#">Ver invitado</a>
-        </div>
-    </section>
+    <main class="contenedor conenido-main">
+        <h1>Invitados</h1>
+        <section class="contenedor contenido-festival">
+            <div class="imagen-festival">
+                <img src="./img/akira.jpg" alt="Mangaka">
+            </div>
+            <div class="informacion-festival">
+                <h3>Akira Toriyama</h3>
+                <p>EL famoso creador de la icónica serie Dragon Ball y Dragon Ball Z</p>
+                <a href="#">Ver invitado</a>
+            </div>
+            <div class="imagen-festival">
+                <img src="./img/oda.jpeg" alt="Mangaka">
+            </div>
+            <div class="informacion-festival">
+                <h3>Eichiro Oda</h3>
+                <p>EL famoso creador de la icónica serie One Piece</p>
+                <a href="#">Ver invitado</a>
+            </div>
+        </section>
+    </main>
  
 </body>
 </html>
