Se modifican los estilos de contenido, header y video

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <title>Comic Con Versión ZZ</title>
+    <title>Pow Zone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./src/css/app.css">
@@ -51,7 +51,7 @@
             <div class="informacion-festival">
                 <h3>Akira Toriyama</h3>
                 <p>EL famoso creador de la icónica serie Dragon Ball y Dragon Ball Z</p>
-                <a href="#">Ver invitado</a>
+                <a href="./invitados.html">Ver invitado</a>
             </div>
             <div class="imagen-festival">
                 <img src="./img/oda.jpeg" alt="Mangaka">
@@ -59,7 +59,7 @@
             <div class="informacion-festival">
                 <h3>Eichiro Oda</h3>
                 <p>EL famoso creador de la icónica serie One Piece</p>
-                <a href="#">Ver invitado</a>
+                <a href="./invitados.html">Ver invitado</a>
             </div>
         </section>
     </main>
