--- a/index.html
+++ b/index.html
@@ -1,68 +1,119 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <title>Pow Zone</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="./src/css/app.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./build/css/app.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
+  <body>
     <header class="header">
-        <div class="contenedor contenido-header">
-            <h1 class="titulo">Pow <span>Zone</span></h1>
-            <h1 class="titulo2">P <span>Z</span></h1>            
+      <div class="contenedor contenido-header">
+        <h1 class="titulo">Pow <span>Zone</span></h1>
+        <h1 class="titulo2">P <span>Z</span></h1>
 
-            <nav class="navegacion-princiapl">
-                <a href="#">Invitados</a>
-                <a href="#">Galeria</a>
-                <a href="#">Entradas</a>
-                <a href="#">Programación</a>
-            </nav>
-            
-        </div>
+        <nav class="navegacion-princiapl">
+          <a href="#">Invitados</a>
+          <a href="#">Galeria</a>
+          <a href="#">Entradas</a>
+          <a href="#">Programación</a>
+        </nav>
+      </div>
     </header>
 
     <div class="video">
-        <div class="overlay">
-            <div class="contenedor contenido-video">
-                <h2>Aprende a dibujar Comic</h2>
-                <p>Taller de dibujo COMIC</p>
-            </div>
+      <div class="overlay">
+        <div class="contenedor contenido-video">
+          <h2>Aprende a dibujar Comic</h2>
+          <p>Taller de dibujo COMIC</p>
         </div>
-        <video autoplay muted loop>
-            <source src="./video/cap.mp4" type="video/mp4">
-            <source src="./video/cap.ogg" type="video/ogg">
-            <source src="./video/cap.webm" type="video/webm">
-        </video>
+      </div>
+      <video autoplay muted loop>
+        <source src="./video/cap.mp4" type="video/mp4" />
+        <source src="./video/cap.ogg" type="video/ogg" />
+        <source src="./video/cap.webm" type="video/webm" />
+      </video>
     </div>
 
     <main class="contenedor conenido-main">
-        <h1>Invitados</h1>
-        <section class="contenedor contenido-festival">
-            <div class="imagen-festival">
-                <img src="./img/akira.jpg" alt="Mangaka">
-            </div>
-            <div class="informacion-festival">
-                <h3>Akira Toriyama</h3>
-                <p>EL famoso creador de la icónica serie Dragon Ball y Dragon Ball Z</p>
-                <a href="./invitados.html">Ver invitado</a>
-            </div>
-            <div class="imagen-festival">
-                <img src="./img/oda.jpeg" alt="Mangaka">
-            </div>
-            <div class="informacion-festival">
-                <h3>Eichiro Oda</h3>
-                <p>EL famoso creador de la icónica serie One Piece</p>
-                <a href="./invitados.html">Ver invitado</a>
-            </div>
-        </section>
+      <h1>Invitados</h1>
+      <section class="contenedor contenido-festival">
+        <div class="imagen-festival">
+          <img src="./src/img/akira.jpg" alt="Mangaka" />
+        </div>
+        <div class="informacion-festival">
+          <h3>Akira Toriyama</h3>
+          <p>
+            El famoso creador de la icónica serie Dragon Ball y Dragon Ball Z
+          </p>
+          <a href="./invitados.html">Ver invitado</a>
+        </div>
+        <div class="imagen-festival">
+          <img src="./src/img/oda.jpeg" alt="Mangaka" />
+        </div>
+        <div class="informacion-festival">
+          <h3>Eichiro Oda</h3>
+          <p>El famoso creador de la icónica serie One Piece</p>
+          <a href="./invitados.html">Ver invitado</a>
+        </div>
+        <div class="imagen-festival">
+          <img src="./src/img/stan.jpg" alt="Mangaka" />
+        </div>
+        <div class="informacion-festival">
+          <h3>Stan Lee</h3>
+          <p>El famoso creador de todas las historias de Marvel</p>
+          <a href="./invitados.html">Ver invitado</a>
+        </div>
+      </section>
     </main>
- 
-</body>
+
+    <section class="contenido grid-galeria">
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/marvel.jpg" alt="imagen uno" />
+      </div>
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/one.jpg" alt="imagen uno" />
+      </div>
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/dbz.jpg" alt="imagen uno" />
+      </div>
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/dbz.jpg" alt="imagen uno" />
+      </div>
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/marvel.jpg" alt="imagen uno" />
+      </div>
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/dbz.jpg" alt="imagen uno" />
+      </div>
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/one.jpg" alt="imagen uno" />
+      </div>
+      <div class="contenido-galeria">
+        <img src="./src/img/comic/marvel.jpg" alt="imagen uno" />
+      </div>
+    </section>
+
+    <footer class="contenedor footer">
+      <nav class="redes-sociales">
+        <a href="#"><img src="./src/img/redes/whats.png" alt="" /></a>
+        <a href="#"><img src="./src/img/redes/linkedin.png" alt="" /></a>
+        <a href="#"><img src="./src/img/redes/github.png" alt="" /></a>
+      </nav>
+      <div class="informacion-autor">
+        <p>Jaime Zapata Valencia</p>
+        <p>Desarrollador de Software</p>
+        <p>&copy;</p>
+      </div>
+    </footer>
+  </body>
 </html>
