Se agrea tarea para optimizar png y jpg

--- a/index.html
+++ b/index.html
@@ -78,29 +78,24 @@
 
     <section class="contenido grid-galeria">
       <div class="contenido-galeria">
-        <img src="./src/img/comic/marvel.jpg" alt="imagen uno" />
+        <img src="./build/img/comic/dbz.webp" alt="imagen uno" />
       </div>
       <div class="contenido-galeria">
-        <img src="./src/img/comic/one.jpg" alt="imagen uno" />
+        <img src="./build/img/comic/one.webp" alt="imagen uno" />
       </div>
       <div class="contenido-galeria">
-        <img src="./src/img/comic/dbz.jpg" alt="imagen uno" />
+        <img src="./build/img/comic/marvel.webp" alt="imagen uno" />
       </div>
       <div class="contenido-galeria">
-        <img src="./src/img/comic/dbz.jpg" alt="imagen uno" />
+        <img src="./build/img/comic/one.webp" alt="imagen uno" />
       </div>
       <div class="contenido-galeria">
-        <img src="./src/img/comic/marvel.jpg" alt="imagen uno" />
+        <img src="./build/img/comic/dbz.webp" alt="imagen uno" />
       </div>
       <div class="contenido-galeria">
-        <img src="./src/img/comic/dbz.jpg" alt="imagen uno" />
+        <img src="./build/img/comic/marvel.webp" alt="imagen uno" />
       </div>
-      <div class="contenido-galeria">
-        <img src="./src/img/comic/one.jpg" alt="imagen uno" />
-      </div>
-      <div class="contenido-galeria">
-        <img src="./src/img/comic/marvel.jpg" alt="imagen uno" />
-      </div>
+
     </section>
 
     <footer class="contenedor footer">
