Se agrega la sección de programación con sus estilos

--- a/index.html
+++ b/index.html
@@ -84,24 +84,215 @@
         </section>
     </main>
 
-    <section class="contenido grid-galeria">
-        <div class="contenido-galeria">
-            <img src="./build/img/comic/dbz.webp" alt="imagen uno" />
+    <section class="programacion">
+        <h2 class="programacion-titulo">Programación</h2>
+
+        <p>Viernes</p>
+        <div class="invitados-contenedor contenedor">
+            <div class="invitado akira">
+                <p class="nombre-invitado">Akira toriyama</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="invitado eichiro">
+                <p class="nombre-invitado">Eichiro Oda</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="invitado stan">
+                <p class="nombre-invitado">Stan Lee</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="contenido-galeria">
-            <img src="./build/img/comic/one.webp" alt="imagen uno" />
+
+
+        <p>Sábado</p>
+        <div class="invitados-contenedor contenedor">
+            <div class="invitado eichiro">
+                <p class="nombre-invitado">Eichiro Oda</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="invitado stan">
+                <p class="nombre-invitado">Stan Lee</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="invitado akira">
+                <p class="nombre-invitado">Akira Toriyama</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="contenido-galeria">
-            <img src="./build/img/comic/marvel.webp" alt="imagen uno" />
-        </div>
-        <div class="contenido-galeria">
-            <img src="./build/img/comic/one.webp" alt="imagen uno" />
-        </div>
-        <div class="contenido-galeria">
-            <img src="./build/img/comic/dbz.webp" alt="imagen uno" />
-        </div>
-        <div class="contenido-galeria">
-            <img src="./build/img/comic/marvel.webp" alt="imagen uno" />
+
+        <p>Domingo</p>
+        <div class="invitados-contenedor contenedor">
+            <div class="invitado stan">
+                <p class="nombre-invitado">Stan Lee</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="invitado akira">
+                <p class="nombre-invitado">Akira Yoriyama</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="invitado eichiro">
+                <p class="nombre-invitado">Eichiro Oda</p>
+
+                <ul class="calendario">
+                    <li>
+                        10:00 | <span>Firma de autográfos</span>
+                    </li>
+                    <li>
+                        12:00 | <span>Conversatorio</span>
+                    </li>
+                    <li>
+                        16:00 | <span>Toma de fotos</span>
+                    </li>
+                    <li>
+                        18:00 | <span>Homenaje</span>
+                    </li>
+                    <li>
+                        20:00 | <span>Despedida</span>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
