Se agrega animación a la galería

--- a/index.html
+++ b/index.html
@@ -296,6 +296,13 @@
         </div>
     </section>
 
+
+    <section class="galeria contenedor">
+        <h2 class="titulo-galeria">Galería</h2>
+
+        <ul id="galeria" class="galeria-img"></ul>
+    </section>
+
     <footer class="contenedor footer">
         <nav class="redes-sociales">
             <a href="#">
@@ -323,6 +330,8 @@
             <p>&copy;</p>
         </div>
     </footer>
+
+    <script src="./src/js/app.js"></script>
 </body>
 
 </html>
