Se actualiza la sección de boletos

--- a/index.html
+++ b/index.html
@@ -220,42 +220,72 @@
           <h3>Viernes</h3>
           <p><small>Nota</small> Te da acceso solamente a:</p>
           <ul>
-              <li>Acceso al evento y a todas su secciones de comercio</li>
-              <li>Acceso solamente al conversatorio de un Invitado</li>
-              <li>Acceso solamente al conversatorio d eun Invitado</li>
+            <p>
+              <strong>*</strong> Acceso al evento y a todas su secciones de
+              comercio
+            </p>
+            <p>
+              <strong>*</strong> Acceso solamente al conversatorio de un
+              Invitado
+            </p>
+            <p>
+              <strong>*</strong> Acceso solamente al conversatorio d eun
+              Invitado
+            </p>
           </ul>
         </div>
         <div class="boleto">
           <h3>Sábado</h3>
           <p><small>Nota</small> Te da acceso solamente a:</p>
           <ul>
-              <li>Acceso al evento y a todas su secciones de comercio</li>
-              <li>Acceso solamente al conversatorio de un Invitado</li>
-              <li>Acceso solamente al conversatorio de un Invitado</li>
-              <li>Acceso al Homenaje de un solo invitado</li>
-              <li>Acceso a la despedida de un solo Invitado</li>
+            <p>
+              <strong>*</strong> Acceso al evento y a todas su secciones de
+              comercio
+            </p>
+            <p>
+              <strong>*</strong> Acceso solamente al conversatorio de un
+              Invitado
+            </p>
+            <p>
+              <strong>*</strong> Acceso solamente al conversatorio de un
+              Invitado
+            </p>
+            <p><strong>*</strong> Acceso al Homenaje de un solo invitado</p>
+            <p><strong>*</strong> Acceso a la despedida de un solo Invitado</p>
           </ul>
         </div>
         <div class="boleto">
           <h3>Domingo</h3>
           <p><small>Nota</small> Te da acceso solamente a:</p>
           <ul>
-            <li>Acceso al evento y a todas su secciones de comercio</li>
-            <li>Acceso solamente al conversatorio de dos Invitados</li>
-            <li>Acceso solamente al conversatorio de dos Invitados</li>
-            <li>Acceso al Homenaje de dos Invitados</li>
-            <li>Acceso a la despedida de dos Invitados</li>
+            <p>
+              <strong>*</strong> Acceso al evento y a todas su secciones de
+              comercio
+            </p>
+            <p>
+              <strong>*</strong> Acceso solamente al conversatorio de dos
+              Invitados
+            </p>
+            <p>
+              <strong>*</strong> Acceso solamente al conversatorio de dos
+              Invitados
+            </p>
+            <p><strong>*</strong> Acceso al Homenaje de dos Invitados</p>
+            <p><strong>*</strong> Acceso a la despedida de dos Invitados</p>
           </ul>
         </div>
         <div class="boleto">
           <h3>Pase VIP</h3>
           <p><small>Nota</small> Te da acceso solamente a:</p>
           <ul>
-              <li>Acceso al evento y a todas su secciones de comercio</li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+            <p>
+              <strong>*</strong> Acceso al evento y a todas su secciones de
+              comercio
+            </p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
           </ul>
         </div>
       </div>
