Se modifican la navegación

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <h1 class="titulo2">P <span>Z</span></h1>
 
         <nav class="navegacion-princiapl">
-          <a href="#">Invitados</a>
-          <a href="#">Galeria</a>
-          <a href="#">Entradas</a>
-          <a href="#">Programación</a>
+          <a href="#invitados">Invitados</a>
+          <a href="#galeria">Galeria</a>
+          <a href="#boletos">Entradas</a>
+          <a href="#programacion">Programación</a>
         </nav>
       </div>
     </header>
@@ -44,7 +44,7 @@
       </video>
     </div>
 
-    <main class="contenedor conenido-main">
+    <main id="invitados" class="contenedor conenido-main">
       <h1>Invitados</h1>
       <section class="contenedor contenido-festival">
         <div class="imagen-festival">
@@ -85,7 +85,7 @@
       </section>
     </main>
 
-    <section class="programacion">
+    <section id="programacion" class="programacion">
       <h2 class="programacion-titulo">Programación</h2>
 
       <p>Viernes</p>
@@ -206,19 +206,18 @@
       </div>
     </section>
 
-    <section class="galeria contenedor">
+    <section id="galeria" class="galeria contenedor">
       <h2 class="titulo-galeria">Galería</h2>
 
       <ul id="galeria" class="galeria-img"></ul>
     </section>
 
-    <section class="boletos contenido">
+    <section id="boletos" class="boletos contenido">
       <h2>Boletos</h2>
 
       <div class="contenido-boletos">
         <div class="boleto">
           <h3>Viernes</h3>
-          <p><small>Nota</small> Te da acceso solamente a:</p>
           <ul>
             <p>
               <strong>*</strong> Acceso al evento y a todas su secciones de
@@ -236,7 +235,6 @@
         </div>
         <div class="boleto">
           <h3>Sábado</h3>
-          <p><small>Nota</small> Te da acceso solamente a:</p>
           <ul>
             <p>
               <strong>*</strong> Acceso al evento y a todas su secciones de
@@ -255,28 +253,30 @@
           </ul>
         </div>
         <div class="boleto">
-          <h3>Domingo</h3>
-          <p><small>Nota</small> Te da acceso solamente a:</p>
-          <ul>
-            <p>
-              <strong>*</strong> Acceso al evento y a todas su secciones de
-              comercio
-            </p>
-            <p>
-              <strong>*</strong> Acceso solamente al conversatorio de dos
-              Invitados
-            </p>
-            <p>
-              <strong>*</strong> Acceso solamente al conversatorio de dos
-              Invitados
-            </p>
-            <p><strong>*</strong> Acceso al Homenaje de dos Invitados</p>
-            <p><strong>*</strong> Acceso a la despedida de dos Invitados</p>
-          </ul>
+          <div>
+            <h3>Domingo</h3>
+          </div>
+          <div>
+            <ul>
+              <p>
+                <strong>*</strong> Acceso al evento y a todas su secciones de
+                comercio
+              </p>
+              <p>
+                <strong>*</strong> Acceso solamente al conversatorio de dos
+                Invitados
+              </p>
+              <p>
+                <strong>*</strong> Acceso solamente al conversatorio de dos
+                Invitados
+              </p>
+              <p><strong>*</strong> Acceso al Homenaje de dos Invitados</p>
+              <p><strong>*</strong> Acceso a la despedida de dos Invitados</p>
+            </ul>
+          </div>
         </div>
         <div class="boleto">
           <h3>Pase VIP</h3>
-          <p><small>Nota</small> Te da acceso solamente a:</p>
           <ul>
             <p>
               <strong>*</strong> Acceso al evento y a todas su secciones de
